--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "cookie": "^1.0.2",
     "firebase": "^12.4.0",
+    "firebase-admin": "^13.5.0",
     "lucide-react": "^0.546.0",
     "next": "15.5.4",
     "react": "19.1.0",
