--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-plugin-streaming": "^2.0.0",
+    "date-fns": "^4.1.0",
     "firebase": "^12.4.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
     "next": "15.5.4",
+    "patch-package": "^8.0.1",
+    "postinstall-postinstall": "^2.1.0",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.1.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.3.0"
