--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "chart.js": "^3.9.1",
-    "chartjs-adapter-date-fns": "^2.0.0",
-    "chartjs-plugin-streaming": "^2.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+
+    "chart.js": "3.9.1",
+    "react-chartjs-2": "4.3.1",
+    "chartjs-adapter-date-fns": "2.0.0",
+    "chartjs-plugin-streaming": "2.0.0",
+
     "date-fns": "^4.1.0",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
@@ -19,9 +24,6 @@
     "next": "15.5.4",
     "patch-package": "^8.0.1",
     "postinstall-postinstall": "^2.1.0",
-    "react": "19.1.0",
-    "react-chartjs-2": "^4.3.1",
-    "react-dom": "19.1.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.3.0"
   },
@@ -29,8 +31,8 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
